[package]
name = "hibp-json-server"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
axum = "0.6"
serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = "0.3"
